[metadata]
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
version = 0.0.1
description = Agents You Need -- Tools to search and access the AI agents you need
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = ayn
display_name = ayn

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

[options.extras_require]
testing = 
		

