[metadata]
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
version = 0.0.1
description = Agents You Need -- Tools to search and access the AI agents you need
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
		ai
		agents
		agent-framework
		mcp
		model-context-protocol
		fastapi
		langchain
		crewai
		autogen
name = ayn
display_name = ayn

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =


[options.extras_require]
fastapi =
		fastapi>=0.104.0
		uvicorn>=0.24.0
		pydantic>=2.0.0
langserve =
		langserve>=0.0.30
		fastapi>=0.104.0
mcp =
		# MCP has no external dependencies (pure protocol implementation)
all =
		fastapi>=0.104.0
		uvicorn>=0.24.0
		pydantic>=2.0.0
		langserve>=0.0.30
testing =
		pytest>=7.0.0
		pytest-asyncio>=0.21.0
dev =
		%(testing)s
		%(all)s
		black>=23.0.0
		ruff>=0.1.0
		mypy>=1.0.0

